packages/gaist/examples/invalid/missing-brace.gaist
// Missing opening brace in logic section
state {
  count = 0;
}

logic
  function test() {
    count = 1;
  }
} 